Fix inventory spacing and drag n drop. New bg image.

--- a/app.css
+++ b/app.css
@@ -26,7 +26,7 @@ body {
 
     margin: 0;
     background-color: #000;
-    background-image: url('/img/background.jpg');
+    background-image: url('/img/gw520.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -170,7 +170,8 @@ body {
 
 .inventory {
     display: inline-block;
-    transform: translate(315px, 197px);
+    /*transform: translate(315px, 197px);*/
+    transform: translate(507px, 207px);
     /*top: 197px;
     left: 315px;*/
     font-size: 0;
@@ -183,8 +184,7 @@ body {
     display: inline-block;
     width: 52px;
     height: 52px;
-    margin-right: 5px;
-    margin-bottom: 5px;
+    margin: 0px 7px 7px 0px;
     border: 1px solid transparent;
 }
 
